Changes in version 0.2.5
------------------------

* The release target no longer fails if the API dir is missing.


Changes in version 0.2.4
------------------------

* Fixed broken Javadoc macro (wasn't setting default properties).


Changes in version 0.2.3
------------------------

* Added macros for dist, release and Javadoc.

* Upgraded to latest version (2.0.1) of XSLTHL.

* Fixed broken dependencies for DocBook XSL:FO stylesheets.


Changes in version 0.2.2
------------------------

* Upgraded DocBook XSL stylesheets to version 1.75.2.

* Added DocBook customisation layers (required for synax highlighting with
  latest XSL stylesheets).

* Fixed error caused by multiple invocations of the Maven macro.
  

Changes in version 0.2.1
------------------------

* Refinements to Maven macro.  Now includes the POM file in correct location in
  the JAR file and also includes pom.properties.


Changes in version 0.2
-----------------------

* Fixed 'test' macro so that module-specific libraries are included on the
  classpath.

* Upgraded to ReportNG 1.0 and TestNG 5.10.

* Added macro for deploying to Maven repositories.


Changes in version 0.1.1
------------------------

* Added 'source' macro for building a JAR file that contains a module's source
  code, excluding tests.